this is an update

--- a/src/app/components/select-page/show/show.component.html
+++ b/src/app/components/select-page/show/show.component.html
@@ -1,3 +1,7 @@
-<p>
-  show works!
-</p>
+<div class="box">
+    <h1 class="title is-size-2 has-text-dark">{{ charname }}</h1>
+    
+    <hr>
+
+    <h2 class="subtitle is-size-4 has-text-dark"></h2>
+</div>  
