--- a/src/app/components/select-page/select-page.component.html
+++ b/src/app/components/select-page/select-page.component.html
@@ -3,17 +3,22 @@
     <div class="container has-text-centered">
       <div class="columns is-multiline is-centered">
 
-        <div class="column is-4">
-          <div class="box">
-            <div>
-              <h1 class="is-size-3">Select a Character</h1>
-            </div>
-            <hr>
-            <div>
-              <app-select></app-select>
-            </div>
-            
+        <div class="column is-3">
+
+          <div *ngIf="!charList">
+            <h1 class="Title is-size-1">Loading...</h1>
           </div>
+
+          <div *ngIf="charList">
+            <div *ngFor="let char of charList.characters">
+                <a (click)="onSelect(char)" class="box has-text-dark is-size-4 charLink">{{ char.name }}</a>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="column is-3">
+          <app-show></app-show>
         </div>
 
         <div class="column is-12">
