--- a/src/app/components/select-page/select/select.component.html
+++ b/src/app/components/select-page/select/select.component.html
@@ -1,7 +1,11 @@
+<div *ngIf="!charList">
+  <h1 class="Title is-size-1">Loading...</h1>
+</div>
+
 <div *ngIf="charList">
   <div *ngFor="let char of charList.characters">
     <div>
-      <a class="box is-size-4">{{ char.name }}</a>
+      <a [routerLink]="['/select', char.name]" class="box has-text-dark is-size-4">{{ char.name }}</a>
     </div>
   </div>
 </div>
