--- a/src/app/components/select-page/show/show.component.html
+++ b/src/app/components/select-page/show/show.component.html
@@ -1,7 +1,30 @@
-<div class="box">
-    <h1 class="title is-size-2 has-text-dark">{{ charname }}</h1>
-    
-    <hr>
+<div class="hero is-fullheight is-dark">
+    <div class="hero-body">
+        <div class="container has-text-centered">
+            <div class="columns is-multiline is-centered">
 
-    <h2 class="subtitle is-size-4 has-text-dark"></h2>
-</div>  
+                <div class="column is-3">
+
+                    <div *ngIf="!charName">
+                        <h1 class="is-size-1 has-text-weight-light">Loading...</h1>
+                    </div>
+                    
+                    <div *ngIf="charName">
+                        <h1 class="is-size-1 has-text-weight-light">{{ charName }}</h1>
+                        <hr>
+                        <div>
+                            
+                        </div>
+
+                    </div>
+
+                    <div>
+                        <a routerLink="/select" class="button is-outlined is-rounded is-danger is-large">back</a>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
