--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -8,7 +8,7 @@
         </div>
 
         <div class="column is-12">
-          <a routerLink="/select" class="button is-large is-danger is-outlined is-rounded">Start -></a>
+          <a routerLink="/select" class="button is-large is-danger is-outlined is-rounded">Start</a>
         </div>
 
       </div>
