--- a/src/app/components/select-page/select-page.component.html
+++ b/src/app/components/select-page/select-page.component.html
@@ -10,7 +10,7 @@
           </div>
 
           <div *ngIf="charList">
-            <div *ngFor="let char of charList">
+            <div *ngFor="let char of charList.characters">
               <a (click)="onSelect(char)" class="box has-text-dark is-size-4 charLink">{{ char.name }}</a>
             </div>
           </div>
