it is done... well nearly I guess

--- a/src/app/components/select-page/select-page.component.html
+++ b/src/app/components/select-page/select-page.component.html
@@ -6,7 +6,7 @@
         <div class="column is-3">
 
           <div *ngIf="!charList">
-            <h1 class="Title is-size-1">Loading...</h1>
+              <h1 class="is-size-5 has-text-weight-light">Loading ...</h1>
           </div>
 
           <div *ngIf="charList">
@@ -18,7 +18,7 @@
         </div>
 
         <div class="column is-12">
-          <a routerLink="/home" class="button is-large is-danger is-rounded is-outlined">Back</a>
+          <a routerLink="/home" class="button is-large is-warning is-rounded is-outlined">Back</a>
         </div>
 
       </div>
